--- a/src/projects/jefferson-riverfront/index.html
+++ b/src/projects/jefferson-riverfront/index.html
@@ -23,6 +23,18 @@ ctaHref: "/get-started.html"
 <script type="application/ld+json">
 {
   "@context": "https://schema.org",
+  "@type": "BreadcrumbList",
+  "itemListElement": [
+    { "@type": "ListItem", "position": 1, "name": "Home", "item": "https://properties4creations.com/" },
+    { "@type": "ListItem", "position": 2, "name": "Properties", "item": "https://properties4creations.com/projects/" },
+    { "@type": "ListItem", "position": 3, "name": "Jefferson Riverfront", "item": "https://properties4creations.com/projects/jefferson-riverfront/" }
+  ]
+}
+</script>
+
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
   "@type": "SingleFamilyResidence",
   "name": "Jefferson Riverfront - Charming 2BR Cabin",
   "description": "Charming 2BR cabin-style home on Big Cypress Bayou in historic Jefferson. Waterfront living with Section 8 eligibility and waterfront recreation access.",
