--- a/src/projects/longview-victorian/index.html
+++ b/src/projects/longview-victorian/index.html
@@ -17,6 +17,18 @@ banner:
 <script type="application/ld+json">
 {
   "@context": "https://schema.org",
+  "@type": "BreadcrumbList",
+  "itemListElement": [
+    { "@type": "ListItem", "position": 1, "name": "Home", "item": "https://properties4creations.com/" },
+    { "@type": "ListItem", "position": 2, "name": "Properties", "item": "https://properties4creations.com/projects/" },
+    { "@type": "ListItem", "position": 3, "name": "Longview Victorian", "item": "https://properties4creations.com/projects/longview-victorian/" }
+  ]
+}
+</script>
+
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
   "@type": "SingleFamilyResidence",
   "name": "Longview Victorian - Historic 4BR/3BA Home",
   "description": "Magnificent 4BR/3BA Victorian masterpiece in Downtown Longview's historic district.",
