--- a/src/projects/marshall-townhome/index.html
+++ b/src/projects/marshall-townhome/index.html
@@ -17,6 +17,18 @@ banner:
 <script type="application/ld+json">
 {
   "@context": "https://schema.org",
+  "@type": "BreadcrumbList",
+  "itemListElement": [
+    { "@type": "ListItem", "position": 1, "name": "Home", "item": "https://properties4creations.com/" },
+    { "@type": "ListItem", "position": 2, "name": "Properties", "item": "https://properties4creations.com/projects/" },
+    { "@type": "ListItem", "position": 3, "name": "Marshall Townhome", "item": "https://properties4creations.com/projects/marshall-townhome/" }
+  ]
+}
+</script>
+
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
   "@type": "SingleFamilyResidence",
   "name": "Marshall Townhome - Modern 2BR Community Property",
   "description": "Modern 2BR townhome in Marshall, Texas. Energy efficient with community pool access.",
