--- a/src/projects/tyler-ranch-home/index.html
+++ b/src/projects/tyler-ranch-home/index.html
@@ -16,6 +16,18 @@ ctaText: "Browse Homes for Families & Veterans"
 ctaHref: "/get-started/"
 ---
 
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "BreadcrumbList",
+  "itemListElement": [
+    { "@type": "ListItem", "position": 1, "name": "Home", "item": "https://properties4creations.com/" },
+    { "@type": "ListItem", "position": 2, "name": "Properties", "item": "https://properties4creations.com/projects/" },
+    { "@type": "ListItem", "position": 3, "name": "Tyler Ranch Home", "item": "https://properties4creations.com/projects/tyler-ranch-home/" }
+  ]
+}
+</script>
+
 <!-- Main Content -->
 
 
