--- a/src/contact.html
+++ b/src/contact.html
@@ -82,6 +82,58 @@ banner:
     </div>
 </section>
 
+<!-- ContactPage Structured Data -->
+<script type="application/ld+json">
+{
+    "@context": "https://schema.org",
+    "@type": "ContactPage",
+    "@id": "https://properties4creations.com/contact/#contactPage",
+    "mainEntity": {
+        "@type": "Organization",
+        "@id": "https://properties4creations.com/#organization",
+        "name": "Properties 4 Creations",
+        "url": "https://properties4creations.com",
+        "contactPoint": {
+            "@type": "ContactPoint",
+            "telephone": "+1-903-283-1770",
+            "email": "contact@properties4creations.com",
+            "contactType": "Customer Service",
+            "availableLanguage": "English",
+            "hoursAvailable": {
+                "@type": "OpeningHoursSpecification",
+                "dayOfWeek": ["Monday", "Tuesday", "Wednesday", "Thursday", "Friday"],
+                "opens": "09:00",
+                "closes": "18:00"
+            }
+        },
+        "address": {
+            "@type": "PostalAddress",
+            "addressLocality": "Tyler",
+            "addressRegion": "TX",
+            "postalCode": "75701",
+            "addressCountry": "US"
+        }
+    },
+    "breadcrumb": {
+        "@type": "BreadcrumbList",
+        "itemListElement": [
+            {
+                "@type": "ListItem",
+                "position": 1,
+                "name": "Home",
+                "item": "https://properties4creations.com"
+            },
+            {
+                "@type": "ListItem",
+                "position": 2,
+                "name": "Contact",
+                "item": "https://properties4creations.com/contact/"
+            }
+        ]
+    }
+}
+</script>
+
 {% block scripts %}
 <script src="/js/google-apps-script-submission.js"></script>
 {% endblock %}
