--- a/src/about.html
+++ b/src/about.html
@@ -38,7 +38,7 @@ ctaHref: "/impact/"
             </div>
             <div class="relative h-96 rounded-2xl overflow-hidden shadow-wood">
                 <img src="/public/images/about/mission-team.webp" alt="Properties 4 Creations Team"
-                    class="w-full h-full object-cover">
+                    class="w-full h-full object-cover" loading="lazy">
                 <div class="absolute inset-0 bg-brand-navy/20"></div>
             </div>
         </div>
