--- a/src/contact.html
+++ b/src/contact.html
@@ -24,15 +24,15 @@ banner:
                     <label>Name <span class="required">*</span></label>
                     <input type="text" name="name" required aria-required="true" placeholder="Your Name"
                         autocomplete="name">
-                    <div class="error-message" aria-hidden="true" style="display: none;"></div>
-                    <div class="success-message" aria-hidden="true" style="display: none;"></div>
+                    <div class="error-message hidden" aria-hidden="true"></div>
+                    <div class="success-message hidden" aria-hidden="true"></div>
                 </div>
                 <div class="form-group required" data-field="email">
                     <label>Email <span class="required">*</span></label>
                     <input type="email" name="email" required aria-required="true" placeholder="email@example.com"
                         autocomplete="email">
-                    <div class="error-message" aria-hidden="true" style="display: none;"></div>
-                    <div class="success-message" aria-hidden="true" style="display: none;"></div>
+                    <div class="error-message hidden" aria-hidden="true"></div>
+                    <div class="success-message hidden" aria-hidden="true"></div>
                 </div>
             </div>
 
@@ -43,16 +43,16 @@ banner:
                 <input type="tel" name="phone" aria-label="Contact phone number" placeholder="(903) 555-0123"
                     autocomplete="tel">
                 <div class="help-text">We'll call if we need more information</div>
-                <div class="error-message" aria-hidden="true" style="display: none;"></div>
-                <div class="success-message" aria-hidden="true" style="display: none;"></div>
+                <div class="error-message hidden" aria-hidden="true"></div>
+                <div class="success-message hidden" aria-hidden="true"></div>
             </div>
 
             <div class="form-group required" data-field="message">
                 <label>Message <span class="required">*</span></label>
                 <textarea name="message" placeholder="Tell us how we can help you with your housing needs..." rows="4"
                     required aria-required="true"></textarea>
-                <div class="error-message" aria-hidden="true" style="display: none;"></div>
-                <div class="success-message" aria-hidden="true" style="display: none;"></div>
+                <div class="error-message hidden" aria-hidden="true"></div>
+                <div class="success-message hidden" aria-hidden="true"></div>
             </div>
 
             <div class="checkbox-group">
