--- a/src/projects/longview-victorian/index.html
+++ b/src/projects/longview-victorian/index.html
@@ -79,10 +79,10 @@ banner:
                 <form action="" method="POST" class="space-y-4">
                     <input type="hidden" name="_subject" value="Lead: Longview Victorian">
                     <input type="hidden" name="_next" value="/thank-you.html">
-                    <label class="block text-sm font-medium text-slate-700 mb-1">Full Name</label>
-                    <input type="text" name="name" required class="w-full border p-2 rounded">
-                    <label class="block text-sm font-medium text-slate-700 mb-1">Email</label>
-                    <input type="email" name="email" required class="w-full border p-2 rounded">
+                    <label for="victorian-name" class="block text-sm font-medium text-slate-700 mb-1">Full Name</label>
+                    <input type="text" id="victorian-name" name="name" required class="w-full border p-2 rounded">
+                    <label for="victorian-email" class="block text-sm font-medium text-slate-700 mb-1">Email</label>
+                    <input type="email" id="victorian-email" name="email" required class="w-full border p-2 rounded">
                     <button type="submit" class="btn-primary w-full rounded-lg py-3 mt-4 text-white font-bold">Request Tour</button>
                 </form>
             </div>
