--- a/src/projects/marshall-townhome/index.html
+++ b/src/projects/marshall-townhome/index.html
@@ -78,10 +78,10 @@ banner:
                 <form action="" method="POST" class="space-y-6">
                     <input type="hidden" name="_subject" value="Lead: Marshall Townhome">
                     <input type="hidden" name="_next" value="/thank-you.html">
-                    <label class="block text-sm font-medium text-slate-700 mb-1">Full Name</label>
-                    <input type="text" name="name" required class="w-full border p-2 rounded">
-                    <label class="block text-sm font-medium text-slate-700 mb-1">Email</label>
-                    <input type="email" name="email" required class="w-full border p-2 rounded">
+                    <label for="townhome-name" class="block text-sm font-medium text-slate-700 mb-1">Full Name</label>
+                    <input type="text" id="townhome-name" name="name" required class="w-full border p-2 rounded">
+                    <label for="townhome-email" class="block text-sm font-medium text-slate-700 mb-1">Email</label>
+                    <input type="email" id="townhome-email" name="email" required class="w-full border p-2 rounded">
                     <button type="submit" class="btn-primary w-full rounded-lg py-3 text-white font-bold">Request Tour</button>
                 </form>
             </div>
