--- a/src/projects/tyler-ranch-home/index.html
+++ b/src/projects/tyler-ranch-home/index.html
@@ -54,9 +54,9 @@ ctaHref: "/get-started/"
                     </div>
                 </div>
 
-                <input type="range" min="0" max="100" value="50"
+                    <label for="before-after-slider" class="sr-only">Adjust before and after comparison (left for before, right for after)</label>
+                    <input type="range" id="before-after-slider" min="0" max="100" value="50"
                     class="absolute inset-0 w-full h-full opacity-0 cursor-ew-resize z-30"
-                    oninput="document.getElementById('compare-overlay').style.width = this.value + '%'">
 
                 <div class="absolute inset-0 pointer-events-none z-20 flex items-center justify-center">
                     <div
@@ -227,14 +227,14 @@ ctaHref: "/get-started/"
                     <input type="hidden" name="_subject" value="Lead: Tyler Ranch Home">
                     <input type="hidden" name="_next" value="/thank-you.html">
 
-                    <label class="block text-sm font-medium text-slate-700 mb-1">Full Name</label>
-                    <input type="text" name="name" required class="input-base">
+                    <label for="name" class="block text-sm font-medium text-slate-700 mb-1">Full Name</label>
+                    <input type="text" id="name" name="name" required class="input-base">
 
-                    <label class="block text-sm font-medium text-slate-700 mb-1">Email</label>
-                    <input type="email" name="email" required class="input-base">
+                    <label for="email" class="block text-sm font-medium text-slate-700 mb-1">Email</label>
+                    <input type="email" id="email" name="email" required class="input-base">
 
-                    <label class="block text-sm font-medium text-slate-700 mb-1">Phone</label>
-                    <input type="tel" name="phone" required class="input-base">
+                    <label for="phone" class="block text-sm font-medium text-slate-700 mb-1">Phone</label>
+                    <input type="tel" id="phone" name="phone" required class="input-base">
 
                     <div class="flex items-center">
                         <input type="checkbox" id="veteran" name="veteran" class="mr-2">
@@ -289,7 +289,7 @@ ctaHref: "/get-started/"
                         </div>
                         <div class="text-sm text-slate-600 mb-2">Walking distance • Rated: 9/10</div>
                         <div class="w-full bg-slate-200 rounded-full h-2">
-                            <div class="bg-green-500 h-2 rounded-full" style="width: 90%"></div>
+                            <div class="bg-green-500 rating-bar-fill" style="width: 90%"></div>
                         </div>
                     </div>
 
@@ -300,7 +300,7 @@ ctaHref: "/get-started/"
                         </div>
                         <div class="text-sm text-slate-600 mb-2">Direct bus route • Rated: 8/10</div>
                         <div class="w-full bg-slate-200 rounded-full h-2">
-                            <div class="bg-blue-500 h-2 rounded-full" style="width: 80%"></div>
+                            <div class="bg-blue-500 rating-bar-fill" style="width: 80%"></div>
                         </div>
                     </div>
 
@@ -311,7 +311,7 @@ ctaHref: "/get-started/"
                         </div>
                         <div class="text-sm text-slate-600 mb-2">Bus accessible • Rated: 7/10</div>
                         <div class="w-full bg-slate-200 rounded-full h-2">
-                            <div class="bg-purple-500 h-2 rounded-full" style="width: 70%"></div>
+                            <div class="bg-purple-500 rating-bar-fill" style="width: 70%"></div>
                         </div>
                     </div>
 
